<resources>
    <string name="app_name">TmdbApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_button">Search</string>
    <string name="search_hint">Search TMDB...</string>
    <string name="title_placeholder_text">Title</string>
    <string name="overview_placeholder_text">Overview</string>
    <string name="popularity_placeholder_text">Popularity</string>
    <string name="release_date_placeholder_text">Release Date</string>
    <string name="vote_average_placeholder_text">Vote Average</string>
    <string name="vote_count_placeholder_text">Vote Count</string>
    <string name="back_button_text">Back</string>
</resources>